Reverse sorting order of achievements by date in AchievementService